# advent_of_code

./: .gitignore  Cargo.toml  README.md
rust/: Cargo.toml  README.md
rust/aoc_derive/: Cargo.toml
rust/aoc_derive/src/: container.rs  input_reader.rs  lib.rs  runner.rs  utils.rs
rust/aoc_project/: Cargo.toml
rust/aoc_project/src/: lib.rs  main.rs
rust/aoc_project/src/solutions_2018/: day7.rs  mod.rs
rust/aoc_project/src/solutions_2019/: day1.rs  day3.rs  mod.rs
rust/aoc_project/src/solutions_2020/: day1.rs  day3.rs  day4.rs  mod.rs
rust/aoc_project/src/solutions_2021/: day1.rs  day4.rs  day5.rs  day8.rs  mod.rs
rust/aoc_types/: Cargo.toml
rust/aoc_types/src/: lib.rs
rust/solutions/: Cargo.toml
rust/solutions/src/: app.rs  helpers.rs  main.rs
rust/solutions/src/year2015/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  mod.rs
rust/solutions/src/year2021/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day8.rs  day9.rs  mod.rs
rust/solutions/src/year2023/: day1.rs  day2.rs  mod.rs
src/: lib.rs  main.rs
src/days/: day1.rs  day2.rs  day3.rs  day5.rs
src/solutions_2015/: day1.rs  day2.rs  mod.rs
src/solutions_2018/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
src/solutions_2019/: day2.rs  mod.rs
src/solutions_2020/: day2.rs  day3.rs  mod.rs
src/solutions_2021/: day1.rs  day2.rs  day3.rs  day5.rs  day6.rs  day7.rs  mod.rs
zig/: build.zig  build.zig.zon
zig/advent_of_code_zig/: build.zig
zig/advent_of_code_zig/src/: main.zig
zig/src/: main.zig  root.zig
zig/src/y2023/: day1.zig  day2.zig  day3.zig  solutions.zig
(+5 files in other folders)
