[package]
name = "aoc_project"
version = "0.1.0"
authors = ["Nick Hultz <nhultz328@gmail.com>"]
edition = "2021"

[[bin]]
name = "tester"
path = "src/tester.rs"

[dependencies]
aoc_derive = { path = "../aoc_derive"}
clap = "2.33"
itertools = "0.10"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
nom = "7.1.0"
